--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-body {background-color: #F8F4E7; color: #552800;}
+body {background-color: #F8F4E7; color: #552800; font-size: 150%;}
 a.link {color:#0000A0;}
 a.visited {color: #A000A0;}
 a.active {color: #00A000;}
 img.thumb {height: 100px; width: 100px;}
 img.big {height: 900px; width: 900px;}
 img.xref {vertical-align: middle; padding-left:6px; padding-right:10px;}
+h1,h2,h3,p,span,li {font-family: Kievit,"PT Sans",sans-serif;}
+@font-face{font-family:'Kievit';font-weight:400;font-style:normal;src:url(https://pacha.dev/blog/fonts/kvn.eot?#iefix) format("embedded-opentype"),url(https://pacha.dev/blog/fonts/kvn.woff) format("woff")}
+@font-face{font-family:'Kievit';font-weight:400;font-style:italic;src:url(https://pacha.dev/blog/fonts/kvi.eot?#iefix) format("embedded-opentype"),url(https://pacha.dev/blog/fonts/kvi.woff) format("woff")}
+@font-face{font-family:'Kievit';font-weight:700;font-style:normal;src:url(https://pacha.dev/blog/fonts/kvb.eot?#iefix) format("embedded-opentype"),url(https://pacha.dev/blog/fonts/kvb.woff) format("woff")}
+@font-face{font-family:'Kievit';font-weight:700;font-style:italic;src:url(https://pacha.dev/blog/fonts/kvbi.eot?#iefix) format("embedded-opentype"),url(https://pacha.dev/blog/fonts/kvbi.woff) format("woff")}
