--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img.big {height: 900px; width: 900px;}
 img.xref {vertical-align: middle; padding-left:6px; padding-right:10px;}
 h1, h2, h3, h4, h5, h6 { font-family: Kievit,"PT Sans",sans-serif; letter-spacing: -.028em; }
 h1 { color: #2e87c8; border-bottom: 2px solid #7bb6e1; }
-p,span,li { font-family: Charter,Merriweather,serif; }
+p,span,li,a { font-family: Charter,Merriweather,serif; }
 a { color: #2e87c8 }
 @font-face{font-family:'Charter';font-weight:400;font-style:normal;src:url(https://pacha.dev/blog/fonts/chn.eot?#iefix) 
     format("embedded-opentype"),url(https://pacha.dev/blog/fonts/chn.woff) format("woff")}
