--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #fafafa;
+    color: #2c2e35;
     font-size: 150%;
     max-width: 1280px;
     width: 100%;
@@ -10,15 +11,7 @@ body {
 }
 
 a.link {
-    color: #0000A0;
-}
-
-a.visited {
-    color: #A000A0;
-}
-
-a.active {
-    color: #00A000;
+    color: #1e3765;
 }
 
 img.thumb {
@@ -48,8 +41,8 @@ h6 {
 }
 
 h1 {
-    color: #2e87c8;
-    border-bottom: 2px solid #7bb6e1;
+    color: #1e3765;
+    border-bottom: 2px solid #1e3765;
 }
 
 p,
@@ -61,7 +54,7 @@ figcaption {
 }
 
 a {
-    color: #2e87c8
+    color: #1e3765
 }
 
 @font-face {
