--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fafafa;
+    background-color: #ffffff;
     color: #2c2e35;
     font-size: 150%;
     max-width: 1280px;
@@ -11,7 +11,7 @@ body {
 }
 
 a.link {
-    color: #1e3765;
+    color: #136176;
 }
 
 img.thumb {
@@ -41,8 +41,8 @@ h6 {
 }
 
 h1 {
-    color: #1e3765;
-    border-bottom: 2px solid #1e3765;
+    color: #136176;
+    border-bottom: 2px solid #136176;
 }
 
 p,
@@ -50,39 +50,18 @@ span,
 li,
 a,
 figcaption {
-    font-family: Charter, Merriweather, serif;
+    font-family: Kievit, "PT Sans", sans-serif;
 }
 
 a {
-    color: #1e3765
+    color: #136176
 }
 
-@font-face {
-    font-family: 'Charter';
-    font-weight: 400;
-    font-style: normal;
-    src: url(https://pacha.dev/blog/fonts/chn.eot?#iefix) format("embedded-opentype"), url(https://pacha.dev/blog/fonts/chn.woff) format("woff")
-}
-
-@font-face {
-    font-family: 'Charter';
-    font-weight: 400;
-    font-style: italic;
-    src: url(https://pacha.dev/blog/fonts/chi.eot?#iefix) format("embedded-opentype"), url(https://pacha.dev/blog/fonts/chi.woff) format("woff")
-}
-
-@font-face {
-    font-family: 'Charter';
-    font-weight: 700;
-    font-style: normal;
-    src: url(https://pacha.dev/blog/fonts/chb.eot?#iefix) format("embedded-opentype"), url(https://pacha.dev/blog/fonts/chb.woff) format("woff")
-}
-
-@font-face {
-    font-family: 'Charter';
-    font-weight: 700;
-    font-style: italic;
-    src: url(https://pacha.dev/blog/fonts/chbi.eot?#iefix) format("embedded-opentype"), url(https://pacha.dev/blog/fonts/chbi.woff) format("woff")
+#title a {
+    margin: 0 10px;
+    /* Adjust the value as needed */
+    text-decoration: none;
+    /* Optional: Remove underline from links */
 }
 
 @font-face {
